              Apache Commons Parent 26 RELEASE NOTES

The Commons Parent team is pleased to announce the release of commons-parent-26-SNAPSHOT

The Apache Commons Parent Pom provides common settings for all Apache Commons components.

Update plugins

Changes in this version include:



Changes:
o                   maven-changes-plugin: 2.6 => 2.7
o                   FELIX-3037 has been fixed; the profile java-1.5-detected is no longer needed
                    (in fact it causes problems, because it reverts bndlib to a version that is missing some required new methods)


Historical list of changes: http://commons.apache.org/changes-report.html

For complete information on Commons Parent, including instructions on how to submit bug reports,
patches, or suggestions for improvement, see the Apache Commons Parent website:

http://commons.apache.org/